
dnl Process this file with autoconf to produce a configure script.

AC_INIT(main.c)
AM_INIT_AUTOMAKE(usb-robot, 0.2.0)

AM_CONFIG_HEADER(config.h)

dnl Checks for programs

AC_PROG_CC
AC_MSG_WARN([this had better be the GNU C compiler])

AC_PATH_PROG(PERL, perl)
if test "x$PERL" = "x"; then
   AC_MSG_WARN([perl not found -- the master won't work])
   PERL="/usr/bin/perl"
fi

dnl Check for libraries

AC_CHECK_LIB(ncurses,tgetent,,
AC_CHECK_LIB(termcap,tgetent,,
AC_CHECK_LIB(curses,tgetent,,
	AC_MSG_WARN([could not find a curses library - readline might not work]))))

AC_CHECK_LIB(readline,readline)
AC_CHECK_LIB(history,add_history)

AC_CHECK_LIB(usb,usb_strerror)

dnl Checks for header files

AC_CHECK_HEADERS(usb.h readline/readline.h,,AC_MSG_ERROR(couldn't find libusb header))

dnl Checks for functions

AC_CHECK_FUNC(vprintf,,AC_MSG_ERROR(need vprintf! Use gcc))
AC_CHECK_FUNC(strncasecmp,,AC_DEFINE(strncasecmp,strncmp,[case ignoring string comparison with specified length]))

dnl All done

AC_OUTPUT(Makefile usb-robot-master, [chmod +x usb-robot-master])
