#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT(main.c)
AM_INIT_AUTOMAKE(usb-robot, 0.2.1pre)
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CC
AC_MSG_WARN([this had better be the GNU C compiler])

AC_PATH_PROG(PERL, perl)
if test "x$PERL" = "x"; then
   AC_MSG_WARN([perl not found -- the master won't work])
   PERL="/usr/bin/perl"
fi

AC_CHECK_LIB(ncurses,tgetent)
AC_CHECK_LIB(termcap,tgetent)
AC_CHECK_LIB(curses,tgetent)
#	AC_MSG_WARN([could not find a curses library - readline might not work]))))

AC_CHECK_LIB(readline,readline)
AC_CHECK_LIB(history,add_history)

AC_CHECK_LIB(usb,usb_strerror)

dnl Checks for header files

dnl Crucial ones
AC_CHECK_HEADERS(usb.h,,AC_MSG_ERROR(couldn't find libusb header))

dnl And optional
AC_CHECK_HEADERS(readline/readline.h)
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])
#functions 
AC_CHECK_FUNC(vprintf,,AC_MSG_ERROR(need vprintf! Use gcc))
AC_CHECK_FUNC(strncasecmp,,AC_DEFINE(strncasecmp,strncmp,[case ignoring string comparison with specified length]))
# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([strncasecmp strstr strtol])

#AC_CONFIG_FILES([Makefile])
AC_OUTPUT(Makefile usb-robot-master, [chmod +x usb-robot-master])
